fix: prevent render of unwanted horizontal scrollbar
Add `overflow: hidden` css property to body element.

--- a/index.css
+++ b/index.css
@@ -3,10 +3,16 @@
     src: url(./fonts/Norse-Bold.otf);
 }
 
+html {
+    margin: 0;
+    padding: 0;
+}
+
 body {
+    overflow: hidden;
     font-family: sans-serif;
-    width: 100vw;
     height: 100vh;
+    width: 100%;
     margin: 0;
     padding: 0;
 }
@@ -15,15 +21,13 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
-    margin: 0;
-    padding: 0;
 }
 
 .background-image-container {
     position: relative;
-    height: 100%;
+    height: 101vh;
 }
 
 .background-image {
@@ -73,7 +77,8 @@ body {
 .right-section {
     flex: 1;
     padding: 0;
-    margin: 0px;
+    margin: 0;
+    width: 100%;
 }
 
 .phrases-container {
